# robot_library

./: CMakeLists.txt
catchtests/: basic.cpp  ip_controller.cpp
config/: ghost_operational_limits.json  pid.json  robot_operational_limits.json  robot_simulator_operational_limits.json  tick_robot_moves.json
include/: controller.h  gamepad.h  gamepad_wrapper.h  pid_controller.h  robot.h  robot_agent.h  robot_lib.h  robot_simulator.h  tracking_simulator.h
include/controller/: agent.h  controller_client.h  controller_service.h  pid_controller.h
include/robot_lib/: gamepad_wrapper.h  prey_simulator.h  robot.h  robot_agent.h  robot_agent_new.h  robot_simulator.h  tracking_simulator.h
python/: autonomous_robot.py  autonomous_tick_robot.py  gamepad.py  gamepad_to_ip.py  install_dependencies.py  move_optimizer_v2.py  move_optimizer_v3.py  move_optimizer_v4.py  move_optimzer.py  move_test.py  planner.py  prey_simulator.py  robot_test.py  show_robot.py  test.py  test2.py  two_robots.py
python/agent_tracking_py/: __init__.py  agent_tracking.py  version.py
python/controller/: __init__.py  controller_client.py  gravity.py
scripts/: create_paths  display.py  show_robot.py
src/: agent.cpp  controller_client.cpp  controller_service.cpp  gamepad.cpp  gamepad_wrapper.cpp  pid_controller.cpp  prey_simulator.cpp  robot.cpp  robot_agent.cpp  robot_agent_new.cpp  robot_simulator.cpp  tracking_simulator.cpp
src/tool/: controller.cpp  convert.cpp  fake_robot.cpp  gamepad.cpp  get_agent_info.cpp  hybrid_gamepad.cpp  robot.cpp  robot_agent_test.cpp  robot_paths.cpp  robot_worlds.cpp  stop_fake_robot.cpp
